--- a/notebooks/Array.ipynb
+++ b/notebooks/Array.ipynb
@@ -232,23 +232,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Storage Structure:\n",
+    "**Storage Structure:**\n",
     "- **Python List:** Non-contiguous  \n",
     "- **Array:** Contiguous  \n",
     "\n",
-    "### Performance:\n",
+    "**Performance:**\n",
     "- **Python List:** Slower in comparison  \n",
     "- **Array:** Much faster in all operations  \n",
     "\n",
-    "### Type of Elements:\n",
+    "**Type of Elements:**\n",
     "- **Python List:** Can store elements of any type  \n",
     "- **Array:** All elements must be of the same type  \n",
     "\n",
-    "### Dynamic vs Static:\n",
+    "**Dynamic vs Static:**\n",
     "- **Python List:** Dynamically resizable  \n",
     "- **Array:** Static in size (cannot resize)  \n",
     "\n",
-    "### Access and Manipulation:\n",
+    "**Access and Manipulation:**\n",
     "- **Python List:** Provides easy access and flexible manipulation of elements  \n",
     "- **Array:** Typically offers faster access but less flexibility in manipulation\n"
    ]
