--- a/notebooks/Array.ipynb
+++ b/notebooks/Array.ipynb
@@ -188,23 +188,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Access:**  \n",
-    "  - **Time Complexity:** O(1)  \n",
-    "\n",
-    "- **Search:**  \n",
-    "  - **Time Complexity:** O(n) (worst case)  \n",
-    "  - **Time Complexity (first element):** O(1)  \n",
-    "\n",
-    "- **Insertion:**  \n",
-    "  - **Time Complexity:** O(n) (at the beginning)  \n",
-    "  - **Time Complexity (at the end):** Ω(1)  \n",
-    "\n",
-    "- **Deletion:**  \n",
-    "  - **Time Complexity:** O(n) (at the beginning)  \n",
-    "  - **Time Complexity (at the end):** Ω(1)  \n",
-    "\n",
-    "- **Removal:**  \n",
-    "  - **Time Complexity:** O(n)  "
+    "| **Operation**    | **Time Complexity**       | **Notes**                                      |\n",
+    "|------------------|---------------------------|------------------------------------------------|\n",
+    "| **Access**       | O(1)                      | Constant time for access to any element        |\n",
+    "| **Search**       | O(n) (worst case)         | Linear time search in the worst case           |\n",
+    "|                  | O(1) (first element)      | Constant time when searching for the first element |\n",
+    "| **Insertion**    | O(n) (at the beginning)   | Linear time for insertion at the start         |\n",
+    "|                  | Ω(1) (at the end)         | Constant time for insertion at the end         |\n",
+    "| **Deletion**     | O(n) (at the beginning)   | Linear time for deletion from the start        |\n",
+    "|                  | Ω(1) (at the end)         | Constant time for deletion from the end        |\n",
+    "| **Removal**      | O(n)                      | Linear time for removal of an element          |\n"
    ]
   },
   {
@@ -232,25 +225,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Storage Structure:**\n",
-    "- **Python List:** Non-contiguous  \n",
-    "- **Array:** Contiguous  \n",
-    "\n",
-    "**Performance:**\n",
-    "- **Python List:** Slower in comparison  \n",
-    "- **Array:** Much faster in all operations  \n",
-    "\n",
-    "**Type of Elements:**\n",
-    "- **Python List:** Can store elements of any type  \n",
-    "- **Array:** All elements must be of the same type  \n",
-    "\n",
-    "**Dynamic vs Static:**\n",
-    "- **Python List:** Dynamically resizable  \n",
-    "- **Array:** Static in size (cannot resize)  \n",
-    "\n",
-    "**Access and Manipulation:**\n",
-    "- **Python List:** Provides easy access and flexible manipulation of elements  \n",
-    "- **Array:** Typically offers faster access but less flexibility in manipulation\n"
+    "| **Criteria**               | **Python List**                           | **Array**                                  |\n",
+    "|----------------------------|-------------------------------------------|--------------------------------------------|\n",
+    "| **Storage Structure**       | Non-contiguous                            | Contiguous                                 |\n",
+    "| **Performance**             | Slower in comparison                      | Much faster in all operations             |\n",
+    "| **Type of Elements**        | Can store elements of any type            | All elements must be of the same type      |\n",
+    "| **Dynamic vs Static**       | Dynamically resizable                     | Static size (cannot resize)                |\n",
+    "| **Access and Manipulation** | Provides easy access and flexible manipulation | Faster access but less flexibility in manipulation |\n"
    ]
   },
   {
