--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "\n",
         "* `sys.path` is a list of directories that Python searches when looking for modules.\n",
-        "* By using `append()`, the directory `/content/drive/MyDrive/2025_Teaching/2025_Data_Structures/Code` is added to this list, allowing Python to import modules or packages located in that path.\n"
+        "* By using `append()`, the directory `CourseFile/` is added to this list, allowing Python to import modules or packages located in that path.\n"
       ]
     },
     {
