brr brr patapim

--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -535,7 +535,9 @@
        "        <h1 style='color:#1e3d59;'>📚 Bibliothèque des Pléiades</h1>\n",
        "    <div style='display: flex; flex-wrap: wrap;'>\n",
        "            <div style=\"\n",
-       "                background-color: #f7f7f7;\n",
+       "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+       "                url('../assets/images/ReZero.jpg') no-repeat center center;\n",
+       "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
        "                margin: 10px;\n",
@@ -543,7 +545,8 @@
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
        "                transition: transform 0.2s;\n",
-       "            \">\n",
+       "                \">\n",
+       "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Re:Zero</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Tappei Nagatsuki</p>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\">\n",
@@ -564,7 +567,9 @@
        "            </div>\n",
        "            \n",
        "            <div style=\"\n",
-       "                background-color: #fceeee;\n",
+       "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+       "                url('../assets/images/Makeine Too Many Losing Heroines!.jpg') no-repeat center center;\n",
+       "                background-size: cover;\n",
        "                border-left: 6px solid #e74c3c;\n",
        "                border-radius: 12px;\n",
        "                margin: 10px;\n",
@@ -572,7 +577,8 @@
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
        "                transition: transform 0.2s;\n",
-       "            \">\n",
+       "                \">\n",
+       "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Makeine: Too Many Losing Heroines!</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Takibi Amamori</p>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\">\n",
@@ -593,7 +599,9 @@
        "            </div>\n",
        "            \n",
        "            <div style=\"\n",
-       "                background-color: #f7f7f7;\n",
+       "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+       "                url('../assets/images/Tomodachi Game.jpg') no-repeat center center;\n",
+       "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
        "                margin: 10px;\n",
@@ -601,7 +609,8 @@
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
        "                transition: transform 0.2s;\n",
-       "            \">\n",
+       "                \">\n",
+       "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Tomodachi Game</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Mikoto Yamaguchi</p>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\">\n",
@@ -622,7 +631,9 @@
        "            </div>\n",
        "            \n",
        "            <div style=\"\n",
-       "                background-color: #f7f7f7;\n",
+       "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+       "                url('../assets/images/Summer Time Rendering.jpg') no-repeat center center;\n",
+       "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
        "                margin: 10px;\n",
@@ -630,7 +641,8 @@
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
        "                transition: transform 0.2s;\n",
-       "            \">\n",
+       "                \">\n",
+       "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Summer Time Rendering</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Yasuki Tanaka</p>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\">\n",
@@ -651,7 +663,9 @@
        "            </div>\n",
        "            \n",
        "            <div style=\"\n",
-       "                background-color: #f7f7f7;\n",
+       "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+       "                url('../assets/images/Go-Toubun no Hanayome.jpg') no-repeat center center;\n",
+       "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
        "                margin: 10px;\n",
@@ -659,7 +673,8 @@
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
        "                transition: transform 0.2s;\n",
-       "            \">\n",
+       "                \">\n",
+       "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Go-Toubun no Hanayome</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Negi Haruba</p>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\">\n",
@@ -711,7 +726,9 @@
     "\n",
     "            html += f\"\"\"\n",
     "            <div style=\"\n",
-    "                background-color: {bg_card};\n",
+    "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
+    "                url('../assets/images/{book['title'].replace(':', '')}.jpg') no-repeat center center;\n",
+    "                background-size: cover;\n",
     "                border-left: 6px solid {color};\n",
     "                border-radius: 12px;\n",
     "                margin: 10px;\n",
@@ -719,7 +736,8 @@
     "                width: 300px;\n",
     "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
     "                transition: transform 0.2s;\n",
-    "            \">\n",
+    "                \">\n",
+    "\n",
     "                <h3 style=\"margin-top: 0; color: #2c3e50;\">{book['title']}</h3>\n",
     "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> {book['author']}</p>\n",
     "                <p style=\"margin: 4px 0; color : #585858;\">\n",
