--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "    <div style='display: flex; flex-wrap: wrap;'>\n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../assets/images/ReZero.jpg') no-repeat center center;\n",
+       "                url('../../_static/images/ReZero.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -568,7 +568,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../assets/images/Makeine Too Many Losing Heroines!.jpg') no-repeat center center;\n",
+       "                url('../../_static/images/Makeine Too Many Losing Heroines!.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #e74c3c;\n",
        "                border-radius: 12px;\n",
@@ -600,7 +600,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../assets/images/Tomodachi Game.jpg') no-repeat center center;\n",
+       "                url('../../_static/images/Tomodachi Game.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -632,7 +632,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../assets/images/Summer Time Rendering.jpg') no-repeat center center;\n",
+       "                url('../../_static/images/Summer Time Rendering.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -664,7 +664,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../assets/images/Go-Toubun no Hanayome.jpg') no-repeat center center;\n",
+       "                url('../../_static/images/Go-Toubun no Hanayome.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -727,7 +727,7 @@
     "            html += f\"\"\"\n",
     "            <div style=\"\n",
     "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-    "                url('../assets/images/{book['title'].replace(':', '')}.jpg') no-repeat center center;\n",
+    "                url('../_static/images/{book['title'].replace(\":\", \"\")}.jpg') no-repeat center center;\n",
     "                background-size: cover;\n",
     "                border-left: 6px solid {color};\n",
     "                border-radius: 12px;\n",
