--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 137,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 138,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 139,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 140,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 141,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 142,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,15 +439,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'title': 'Makeine: Too Many Losing Heroines!', 'author': 'Takibi Amamori', 'copies': 2}]\n",
-      "[{'title': 'Re:Zero', 'author': 'Tappei Nagatsuki', 'copies': 5}]\n"
+      "[{'title': 'Makeine: Too Many Losing Heroines!', 'author': 'Takibi Amamori', 'copies': 2, 'description': 'No description yet.'}]\n",
+      "[{'title': 'Re:Zero', 'author': 'Tappei Nagatsuki', 'copies': 5, 'description': 'No description yet.'}]\n"
      ]
     },
     {
@@ -456,7 +456,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,19 +524,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "    <div style='font-family: \"Segoe UI\", sans-serif; background-color: #ffffff; padding: 20px; border-radius: 8px;'>\n",
-       "        <h1 style='color:#1e3d59;'>📚 Bibliothèque des Pléiades</h1>\n",
+       "    <div style='font-family: \"Segoe UI\", sans-serif; background-color: #f5f5f5; padding: 20px; border-radius: 8px; max-width: 1200px; margin: 0 auto;'>\n",
+       "        <h1 style='color:#1e3d59; text-align: center; margin-bottom: 25px;'>📚 Bibliothèque des Pléiades</h1>\n",
        "    <div style='display: flex; flex-wrap: wrap;'>\n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../../_static/images/ReZero.jpg') no-repeat center center;\n",
+       "                url('../_static/images/ReZero.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -544,8 +544,12 @@
        "                padding: 15px 20px;\n",
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-       "                transition: transform 0.2s;\n",
-       "                \">\n",
+       "                transition: transform 0.3s, box-shadow 0.3s;\n",
+       "                cursor: pointer;\n",
+       "                \"\n",
+       "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+       "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+       "                >\n",
        "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Re:Zero</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Tappei Nagatsuki</p>\n",
@@ -568,7 +572,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../../_static/images/Makeine Too Many Losing Heroines!.jpg') no-repeat center center;\n",
+       "                url('../_static/images/Makeine Too Many Losing Heroines!.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #e74c3c;\n",
        "                border-radius: 12px;\n",
@@ -576,8 +580,12 @@
        "                padding: 15px 20px;\n",
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-       "                transition: transform 0.2s;\n",
-       "                \">\n",
+       "                transition: transform 0.3s, box-shadow 0.3s;\n",
+       "                cursor: pointer;\n",
+       "                \"\n",
+       "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+       "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+       "                >\n",
        "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Makeine: Too Many Losing Heroines!</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Takibi Amamori</p>\n",
@@ -600,7 +608,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../../_static/images/Tomodachi Game.jpg') no-repeat center center;\n",
+       "                url('../_static/images/Tomodachi Game.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -608,8 +616,12 @@
        "                padding: 15px 20px;\n",
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-       "                transition: transform 0.2s;\n",
-       "                \">\n",
+       "                transition: transform 0.3s, box-shadow 0.3s;\n",
+       "                cursor: pointer;\n",
+       "                \"\n",
+       "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+       "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+       "                >\n",
        "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Tomodachi Game</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Mikoto Yamaguchi</p>\n",
@@ -632,7 +644,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../../_static/images/Summer Time Rendering.jpg') no-repeat center center;\n",
+       "                url('../_static/images/Summer Time Rendering.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -640,8 +652,12 @@
        "                padding: 15px 20px;\n",
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-       "                transition: transform 0.2s;\n",
-       "                \">\n",
+       "                transition: transform 0.3s, box-shadow 0.3s;\n",
+       "                cursor: pointer;\n",
+       "                \"\n",
+       "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+       "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+       "                >\n",
        "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Summer Time Rendering</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Yasuki Tanaka</p>\n",
@@ -664,7 +680,7 @@
        "            \n",
        "            <div style=\"\n",
        "                background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)),\n",
-       "                url('../../_static/images/Go-Toubun no Hanayome.jpg') no-repeat center center;\n",
+       "                url('../_static/images/Go-Toubun no Hanayome.jpg') no-repeat center center;\n",
        "                background-size: cover;\n",
        "                border-left: 6px solid #2ecc71;\n",
        "                border-radius: 12px;\n",
@@ -672,8 +688,12 @@
        "                padding: 15px 20px;\n",
        "                width: 300px;\n",
        "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-       "                transition: transform 0.2s;\n",
-       "                \">\n",
+       "                transition: transform 0.3s, box-shadow 0.3s;\n",
+       "                cursor: pointer;\n",
+       "                \"\n",
+       "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+       "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+       "                >\n",
        "\n",
        "                <h3 style=\"margin-top: 0; color: #2c3e50;\">Go-Toubun no Hanayome</h3>\n",
        "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Negi Haruba</p>\n",
@@ -708,8 +728,8 @@
     "\n",
     "def visualize_books(library):\n",
     "    html = f\"\"\"\n",
-    "    <div style='font-family: \"Segoe UI\", sans-serif; background-color: #ffffff; padding: 20px; border-radius: 8px;'>\n",
-    "        <h1 style='color:#1e3d59;'>📚 {library.name}</h1>\n",
+    "    <div style='font-family: \"Segoe UI\", sans-serif; background-color: #f5f5f5; padding: 20px; border-radius: 8px; max-width: 1200px; margin: 0 auto;'>\n",
+    "        <h1 style='color:#1e3d59; text-align: center; margin-bottom: 25px;'>📚 {library.name}</h1>\n",
     "    \"\"\"\n",
     "\n",
     "    if not library.books:\n",
@@ -735,8 +755,12 @@
     "                padding: 15px 20px;\n",
     "                width: 300px;\n",
     "                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);\n",
-    "                transition: transform 0.2s;\n",
-    "                \">\n",
+    "                transition: transform 0.3s, box-shadow 0.3s;\n",
+    "                cursor: pointer;\n",
+    "                \"\n",
+    "                onmouseover=\"this.style.transform='translateY(-8px)'; this.style.boxShadow='0 12px 20px rgba(0, 0, 0, 0.15)';\"\n",
+    "                onmouseout=\"this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px rgba(0, 0, 0, 0.05)';\"\n",
+    "                >\n",
     "\n",
     "                <h3 style=\"margin-top: 0; color: #2c3e50;\">{book['title']}</h3>\n",
     "                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> {book['author']}</p>\n",
