--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "True"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "            .book-card {\n",
        "                position: relative;\n",
        "                height: 300px;\n",
-       "                width: 350px;\n",
+       "                width: 300px;\n",
        "                transform-origin: center center;\n",
        "                transition: all 0.3s ease;\n",
        "                cursor: pointer;\n",
@@ -631,7 +631,7 @@
        "                                    \"></div>\n",
        "                                </div>\n",
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-       "                                    <strong>4 copy/copies</strong>\n",
+       "                                    <strong>4 Copies</strong>\n",
        "                                </p>\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
@@ -679,7 +679,7 @@
        "                                    \"></div>\n",
        "                                </div>\n",
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-       "                                    <strong>0 copy/copies</strong>\n",
+       "                                    <strong>0 Copy</strong>\n",
        "                                </p>\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
@@ -727,7 +727,7 @@
        "                                    \"></div>\n",
        "                                </div>\n",
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-       "                                    <strong>2 copy/copies</strong>\n",
+       "                                    <strong>2 Copies</strong>\n",
        "                                </p>\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
@@ -775,7 +775,7 @@
        "                                    \"></div>\n",
        "                                </div>\n",
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-       "                                    <strong>3 copy/copies</strong>\n",
+       "                                    <strong>3 Copies</strong>\n",
        "                                </p>\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
@@ -823,7 +823,7 @@
        "                                    \"></div>\n",
        "                                </div>\n",
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-       "                                    <strong>6 copy/copies</strong>\n",
+       "                                    <strong>6 Copies</strong>\n",
        "                                </p>\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
@@ -970,7 +970,7 @@
     "                                    \"></div>\n",
     "                                </div>\n",
     "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
-    "                                    <strong>{book['copies']} copy/copies</strong>\n",
+    "                                    <strong>{book['copies']} {\"Copy\" if book['copies'] <= 1 else \"Copies\"}</strong>\n",
     "                                </p>\n",
     "                            </div>\n",
     "                            <div class=\"book-back\" style=\"\n",
