--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 163,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 164,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 165,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 166,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 167,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 168,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,16 +396,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "class Library:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "        self.books = []\n",
     "\n",
-    "    def add_book(self, title, author, copies):\n",
+    "    def add_book(self, title, author, copies, description=\"No description available\"):\n",
     "        pass\n",
     "\n",
     "    def borrow_book(self, title):\n",
@@ -417,17 +426,22 @@
     "\n",
     "library = Library(\"Bibliothèque des Pléiades\")\n",
     "\n",
-    "library.add_book(\"Re:Zero\", \"Tappei Nagatsuki\", 5)\n",
-    "library.add_book(\"Makeine: Too Many Losing Heroines!\", \"Takibi Amamori\", 2)\n",
-    "library.add_book(\"Tomodachi Game\", \"Mikoto Yamaguchi\", 3)\n",
-    "library.add_book(\"Summer Time Rendering\", \"Yasuki Tanaka\", 4)\n",
-    "library.add_book(\"Go-Toubun no Hanayome\", \"Negi Haruba\", 6)\n",
+    "library.add_book(\"Re:Zero\", \"Tappei Nagatsuki\", 5, \"Subaru is suddenly transported to a fantasy world where he discovers a terrifying power: every time he dies, he returns to a specific point in time.\")\n",
+    "library.add_book(\"Makeine: Too Many Losing Heroines!\", \"Takibi Amamori\", 2, \"Kazuhiko finds himself caught in a bizarre romantic comedy where all the girls around him are doomed to be 'losing heroines' in love.\")\n",
+    "library.add_book(\"Tomodachi Game\", \"Mikoto Yamaguchi\", 3, \"Yuuichi and his friends are thrown into a mysterious game that tests the strength of their bonds through deception, betrayal, and money.\")\n",
+    "library.add_book(\"Summer Time Rendering\", \"Yasuki Tanaka\", 4, \"Shinpei returns to his island hometown for a friend’s funeral, only to discover dark forces at play and a time loop that could change everything.\")\n",
+    "library.add_book(\"Go-Toubun no Hanayome\", \"Negi Haruba\", 6, \"Fuutarou, a top student, becomes the private tutor of five wealthy quintuplets who all hate studying — and might just fall in love with him.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(library.search_books(\"Makeine\"))\n",
+    "print(library.search_books(\"Re:Zero\"))\n",
     "\n",
     "library.borrow_book(\"Makeine: Too Many Losing Heroines!\")\n",
     "library.borrow_book(\"Makeine: Too Many Losing Heroines!\")\n",
     "library.borrow_book(\"Tomodachi Game\")\n",
     "library.borrow_book(\"Summer Time Rendering\")\n",
-    "library.borrow_book(\"Re:Zero\")\n"
+    "library.borrow_book(\"Re:Zero\")"
    ]
   },
   {
@@ -439,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +470,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +647,10 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>4 Copies</strong>\n",
        "                                </p>\n",
+       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
        "                                background-color: #fdfdfd;\n",
@@ -681,6 +699,10 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>0 Copy</strong>\n",
        "                                </p>\n",
+       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
        "                                background-color: #fceeee;\n",
@@ -729,6 +751,10 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>2 Copies</strong>\n",
        "                                </p>\n",
+       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
        "                                background-color: #fdfdfd;\n",
@@ -777,6 +803,10 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>3 Copies</strong>\n",
        "                                </p>\n",
+       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
        "                                background-color: #fdfdfd;\n",
@@ -825,6 +855,10 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>6 Copies</strong>\n",
        "                                </p>\n",
+       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
        "                            </div>\n",
        "                            <div class=\"book-back\" style=\"\n",
        "                                background-color: #fdfdfd;\n",
@@ -972,6 +1006,10 @@
     "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
     "                                    <strong>{book['copies']} {\"Copy\" if book['copies'] <= 1 else \"Copies\"}</strong>\n",
     "                                </p>\n",
+    "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+    "                                    <strong>Click to see more</strong>\n",
+    "                                </p>\n",
+    "\n",
     "                            </div>\n",
     "                            <div class=\"book-back\" style=\"\n",
     "                                background-color: {bg_card};\n",
