--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 181,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 182,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 183,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 184,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 185,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 186,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "True"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>4 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -699,7 +699,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>0 Copy</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -751,7 +751,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>2 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -803,7 +803,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>3 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -855,7 +855,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>6 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -1006,7 +1006,7 @@
     "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
     "                                    <strong>{book['copies']} {\"Copy\" if book['copies'] <= 1 else \"Copies\"}</strong>\n",
     "                                </p>\n",
-    "                                <p style=\"position: absolute;bottom: 20px;left: 50%;transform: translateX(-50%);font-size: 1em;color: #666;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;text-align: center;background: rgba(255, 255, 255, 0.7);padding: 8px 16px;border-radius: 20px;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);transition: all 0.3s ease;cursor: pointer;\">\n",
+    "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
     "                                    <strong>Click to see more</strong>\n",
     "                                </p>\n",
     "\n",
