--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -391,7 +391,7 @@
     "`search_books(self, search_term):`\n",
     "This method should search for books by their title or author. It should return a list of books that match the search term.\n",
     "\n",
-    "The books should be like this: `[{'title': '', 'author': '', 'copies': }]`"
+    "The books should be like this: `[{'title': '', 'author': '', 'copies': , 'description': ''}]`"
    ]
   },
   {
